--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "nodemon derver.js"
+    "server": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": [
